@@ -10,4 +10,5 @@ v5.9
 + Added price options to search results pages letting you easily filter results by price
 + Incorporated coupon codes into lowest price data
 + The "Remove" links on the wishlist no longer require the page to reload
++ Added regional pricing to sale pages
 : Fixed a bug in market transaction total caused by change in API by Valve
